[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Blow/sc.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.988235, 0.815686, 0.454902, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.584314, 0.384314, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.964706, 0.87451, 0.466667, 1 )

[sub_resource type="InputEventKey" id=4]
scancode = 32

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[sub_resource type="AudioStreamMicrophone" id=6]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="StartButton" type="Button" parent="."]
margin_left = 33.0
margin_top = 94.0
margin_right = 208.0
margin_bottom = 171.0
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_colors/font_color = Color( 0.298039, 0.0862745, 0.258824, 1 )
custom_colors/font_color_hover = Color( 0.298039, 0.0862745, 0.258824, 1 )
enabled_focus_mode = 0
shortcut = SubResource( 5 )
text = "press to start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource( 6 )
autoplay = true

[node name="Label" type="Label" parent="."]
margin_left = 11.3784
margin_top = 44.0813
margin_right = 95.3784
margin_bottom = 65.0813
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mic" type="Label" parent="."]
margin_left = 111.622
margin_top = 42.5137
margin_right = 181.622
margin_bottom = 65.5137
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lDb" type="Label" parent="."]
margin_left = 184.327
margin_top = 47.5683
margin_right = 224.327
margin_bottom = 61.5683
rect_pivot_offset = Vector2( 20, 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "db"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lSeconds" type="Label" parent="."]
margin_left = 86.2175
margin_top = 47.5683
margin_right = 126.218
margin_bottom = 61.5683
rect_pivot_offset = Vector2( 20, 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "sec"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lNoize" type="Label" parent="."]
margin_left = 24.0
margin_top = 233.0
margin_right = 132.0
margin_bottom = 258.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lNoizeStatus" type="Label" parent="."]
margin_left = 34.0
margin_top = 195.0
margin_right = 142.0
margin_bottom = 220.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Is this noise?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lLevelPassed" type="Label" parent="."]
margin_left = 151.0
margin_top = 235.0
margin_right = 206.0
margin_bottom = 249.0
rect_pivot_offset = Vector2( 33.327, 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lProgress" type="Label" parent="."]
margin_left = 143.0
margin_top = 194.0
margin_right = 202.0
margin_bottom = 208.0
rect_pivot_offset = Vector2( 33.327, 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Progress:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer2" type="Timer" parent="."]
one_shot = true
[connection signal="pressed" from="StartButton" to="." method="_on_Button_pressed"]
